test/types/file/freadIntFailed.good
freadIntFailed.chpl:2: error: Invalid argument in file.reader with path "_test_freadIntFailed.txt"
